crates/test-files/fixtures/compile_errors/call_event_with_wrong_types.fe
contract Foo:
    event MyEvent:
        val_1: String<100>
        idx val_2: u8

    pub def foo():
        emit MyEvent("foo", 1000)
